--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -1,5 +1,6 @@
 @import "rouge-github";
-
+//@import url('https://fonts.googleapis.com/css?family=Cairo');
+@import url('https://fontlibrary.org/face/droid-arabic-kufi');
 /*******************************************************************************
 MeyerWeb Reset
 *******************************************************************************/
@@ -24,8 +25,15 @@ time, mark, audio, video {
   vertical-align: baseline;
   text-align: right;
   direction: rtl;
+  font-family: 'Droid Arabic Kufi';
+  font-weight: normal;
+  font-style: normal;
 }
 
+code {
+  text-align: left;
+  direction: ltr;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -59,7 +67,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
   color:#222222;
-  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
+  font-family: 'Droid Arabic Kufi','Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
   letter-spacing: -1px;
 }
 
